--- a/pom.xml
+++ b/pom.xml
@@ -60,5 +60,9 @@
         </dependency>
 
     </dependencies>
-
+    <properties>
+        <java.version>11</java.version>
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
+    </properties>
 </project>
